[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald"
description = "Highly scalable, performant, easy to learn, easy to code and for every application."
long_description = "Highly scalable, performant, easy to learn, easy to code and for every application."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.silva@dymmond.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio>=3.7.1,<5.0.0",
    "awesome-slugify>=1.6.5,<2",
    "click>=8.1.4,<9.0.0",
    "itsdangerous>=2.1.2,<3.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "lilya>=0.3.3",
    "loguru>=0.7.0,<0.8.0",
    "pydantic>=2.5.3,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-multipart>=0.0.7,<0.0.10",
    "openapi-schemas-pydantic>=3.0.0",
    "orjson>=3.8.5,<4.0.0",
    "msgspec>=0.18.5,<1.0.0",
    "nest_asyncio>=1.5.8,<2.0.0",
    "rich>=13.3.1,<14.0.0",
    "typing_extensions>=4.11.0",
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "lilya",
    "framework",
    "websocket",
    "openapi",
    "ml",
    "machine learning",
    "python",
    "security",
    "web",
    "rest",
    "openapi",
    "web-framework",
    "swagger",
    "python3",
    "asyncio",
    "redoc",
    "openapi3",
    "python-types",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/dymmond/esmerald"
Documentation = "https://esmerald.dymmond.com/"
Changelog = "https://esmerald.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/esmerald"

[project.optional-dependencies]
test = ["httpx>=0.25.0,<0.30.0"]
dev = [
    # includes watchfiles
    "uvicorn[standard]>=0.24.0",
]

templates = ["mako>=1.2.4,<2.0.0"]
jwt = ["passlib==1.7.4", "python-jose>=3.3.0,<4"]
encoders = ["ujson>=5.7.0,<6"]
schedulers = ["asyncz>=0.4.0"]
all = ["esmerald[test,dev,templates,jwt,encoders,schedulers]","ipython","ptpython","a2wsgi"]



[tool.hatch.envs.default]
dependencies = ["ruff", "pre-commit>=2.17.0,<3.0.0", "twine"]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
build_with_check = "hatch build; twine check dist/*"
lint = "ruff check --fix --line-length 99 esmerald tests docs_src {args}"


[tool.hatch.envs.docs]
detached = true
skip-install = true
dependencies = [
    "a2wsgi>=1.9.0,<2",
    "griffe-typingdoc>=0.2.2",
    "httpx>=0.25.0,<0.30.0",
    "mike>=2.0.0",
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.1.2,<2.0.0",
    "mkdocs-material>=9.4.4,<10.0.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.2.5,<0.3.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0,<0.30.0",
    "pyyaml>=6.0,<7.0.0",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.hatch.envs.test]
features = ["all"]
dependencies = [
    "pytest>=7.1.3,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-asyncio>=0.20.0",
    "mypy==1.9.0",
    "anyio[trio]>=3.6.2,<5.0.0",
    "brotli>=1.0.9,<2.0.0",
    "flask>=1.1.2,<4.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "polyfactory>=2.5.0,<3.0.0",
    "saffier[postgres]>=1.3.7",
    "edgy[postgres]>=0.4.0",
    "mongoz>=0.6.0",

    # types
    "types-ujson==5.9.0.0",
    "types-orjson==3.6.2",
]
[tool.hatch.envs.test.scripts]
# needs docker services running
test = "ESMERALD_SETTINGS_MODULE='tests.settings.TestSettings' pytest {args}"
coverage = "ESMERALD_SETTINGS_MODULE='tests.settings.TestSettings' pytest --cov=asyncz --cov=tests --cov-report=term-missing:skip-covered --cov-report=html tests {args}"
check_types = "mypy -p lilya"


[tool.hatch.envs.hatch-test]
features = ["all"]
template = "test"
installer = "pip"

[tool.hatch.envs.hatch-test.scripts]
run = "ESMERALD_SETTINGS_MODULE='tests.settings.TestSettings' pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "ESMERALD_SETTINGS_MODULE='tests.settings.TestSettings' coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"

[tool.hatch.version]
path = "esmerald/__init__.py"

[project.scripts]
esmerald = "esmerald.__main__:run_cli"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.isort]
profile = "black"
known_third_party = ["esmerald", "pydantic", "msgspec", "lilya"]

[tool.mypy]
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined,has-type,override"
exclude = "esmerald/conf,esmerald/utils"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = false
strict_equality = false
strict_optional = false

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

exclude = ["docs_src/*"]

[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "esmerald"]
omit = [
    "esmerald/__main__.py",
    "esmerald/conf/__init__.py",
    "esmerald/middleware/errors.py",
    "esmerald/permissions/base.py",
    "esmerald/core/directives/*",
    "esmerald/core/terminal/*",
    "esmerald/datastructures/types.py",
    "esmerald/types.py",
    "esmerald/contrib/*",
    "esmerald/openapi/openapi.py",
    "esmerald/openapi/security/*",
    "tests/databases/saffier/*",
    "tests/databases/edgy/*",
    "tests/utils/functional.py",
    "tests/cli/*",
]

[[tool.mypy.overrides]]
module = "esmerald.tests.*"
ignore_missing_imports = true
check_untyped_defs = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "multipart.*",
    "sqlalchemy.*",
    "sqlalchemy_utils.*",
    "slugify.*",
    "pytz",
    "jose.*",
    "mako.*",
    "passlib.*",
    "esmerald.contrib.auth.saffier.*",
    "openapi_schemas_pydantic.*",
    "nest_asyncio.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/esmerald"]
