[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald"
description = "Highly scalable, performant, easy to learn, easy to code and for every application."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ['version']
authors = [{ name = "Tiago Silva", email = "tiago.silva@dymmond.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "anyio>=3.7.1,<5.0.0",
    "click>=8.1.4,<9.0.0",
    "email-validator >=2.2.0,<3.0.0",
    "itsdangerous>=2.1.2,<3.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "lilya>=0.13.2",
    "loguru>=0.7.0,<0.8.0",
    "pydantic>=2.11.1,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-multipart>=0.0.7",
    "python-slugify>=8.0.4,<10.0.0",
    "orjson>=3.8.5,<4.0.0",
    "msgspec>=0.18.5,<1.0.0",
    "rich>=13.3.1,<15.0.0",
    "typing_extensions>=4.11.0",
    "monkay>=0.3.0",
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "lilya",
    "framework",
    "websocket",
    "openapi",
    "ml",
    "machine learning",
    "python",
    "security",
    "web",
    "rest",
    "openapi",
    "web-framework",
    "swagger",
    "python3",
    "asyncio",
    "redoc",
    "openapi3",
    "python-types",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/dymmond/esmerald"
Documentation = "https://esmerald.dymmond.com/"
Changelog = "https://esmerald.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/esmerald"

[project.optional-dependencies]
test = ["httpx>=0.25.0,<0.30.0"]
dev = [
    # includes watchfiles
    "uvicorn[standard]>=0.24.0",
]

jwt = ["bcrypt>=4.3.0", "pyjwt>=2.10.1,<3"]
schedulers = ["asyncz>=0.11.0"]
all = ["esmerald[test,dev,jwt,schedulers]", "ipython", "ptpython", "a2wsgi"]
testing = [
    "redis",
    "anyio[trio]>=3.6.2,<5.0.0",
    "brotli>=1.0.9,<2.0.0",
    "edgy[postgres]>=0.24.1",
    "databasez>=0.9.7",
    "fakeredis>=2.27.0",
    "flask>=1.1.2,<4.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "grpcio-tools>=1.71.0",
    "mongoz>=0.6.0",
    "mypy==1.15.0",
    "pytest>=7.1.3,<9.0.0",
    "pytest-cov>=4.1.0,<7.0.0",
    "pytest-asyncio>=0.26.0",
    "polyfactory>=2.5.0,<3.0.0",
    "pytz",
    "ujson>=5.7.0,<6",

    # types
    "ipdb",
    "pdbpp",
    "types-ujson==5.10.0.20250326",
    "types-orjson==3.6.2",
]

docs = [
    "a2wsgi>=1.9.0",
    "griffe-typingdoc>=0.2.2",
    "httpx>=0.25.0",
    "lilya>=0.12.11",
    "mkautodoc>=0.2.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.25",
    "mdx-include>=1.4.2",
    "mkdocs-macros-plugin>=0.4.0",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mkdocstrings[python]>=0.23.0",
    "pyyaml>=6.0",
    "click>=8.1.7",
]

[tool.hatch.envs.default]
dependencies = ["ruff", "pre-commit>=2.17.0,<3.0.0", "twine"]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pyi = "find . -type f -name \"*.pyi\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
build_with_check = "hatch build; twine check dist/*"
lint = "ruff check --fix esmerald tests docs_src {args}; hatch run test:check_types"

[tool.hatch.envs.docs]
features = ["all", "docs"]

[tool.hatch.envs.docs.scripts]
update_languages = "scripts/docs.py update-languages"
build = "hatch run docs:update_languages; scripts/docs.py build-all"
build_lang = "hatch run docs:update_languages; scripts/docs.py build --lang {args}"
serve = "hatch run docs:update_languages; scripts/docs.py live"
dev = "hatch run docs:update_languages; scripts/docs.py serve"
serve_lang = "hatch run docs:update_languages; scripts/docs.py live --lang {args}"
new_lang = "hatch run docs:update_languages; scripts/docs.py new-lang --lang {args}"

[tool.hatch.envs.test]
features = ["all", "testing"]

[tool.hatch.envs.test.scripts]
# needs docker services running
test = "hatch test -- {args}"
test_man = "hatch test -- {args} -s -vv"
coverage = "hatch test -- --cov=esmerald --cov=tests --cov-report=term-missing:skip-covered --cov-report=html tests {args}"
check_types = "mypy -p esmerald"

#[[tool.hatch.envs.hatch-test.matrix]]
#python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
#python = ["3.11"]

[tool.hatch.envs.hatch-test]
features = ["all", "testing"]
template = "test"
installer = "pip"

[tool.hatch.envs.hatch-test.env-vars]
ESMERALD_SETTINGS_MODULE = "tests.settings.TestSettings"

[tool.hatch.version]
path = "esmerald/__init__.py"

[project.scripts]
esmerald = "esmerald.__main__:run_cli"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.isort]
profile = "black"
known_third_party = ["esmerald", "pydantic", "msgspec", "lilya"]

[tool.mypy]
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = [
    "attr-defined",
    "has-type",
    "override",
    "safe-super",
    "misc",
]
exclude = "esmerald/conf,esmerald/utils"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = false
strict_equality = false
strict_optional = false

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]
ignore = ["E501", "B008", "C901", "B026"]

exclude = ["docs_src/*"]

[tool.coverage.run]
parallel = true
context = '${CONTEXT}'
source = ["tests", "esmerald"]
omit = [
    "esmerald/__main__.py",
    "esmerald/conf/__init__.py",
    "esmerald/middleware/errors.py",
    "esmerald/permissions/base.py",
    "esmerald/core/directives/*",
    "esmerald/core/terminal/*",
    "esmerald/datastructures/types.py",
    "esmerald/types.py",
    "esmerald/contrib/*",
    "esmerald/openapi/openapi.py",
    "esmerald/openapi/security/*",
    "tests/databases/edgy/*",
    "tests/utils/functional.py",
    "tests/cli/*",
]

[[tool.mypy.overrides]]
module = "esmerald.tests.*"
ignore_missing_imports = true
check_untyped_defs = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "multipart.*",
    "sqlalchemy.*",
    "sqlalchemy_utils.*",
    "slugify.*",
    "pytz",
    "pyjwt.*",
    "bcrypt.*",
    "esmerald.contrib.auth.edgy.*",
    "grpc.*",
    "google.*",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"


[tool.hatch.build.targets.sdist]
include = ["/esmerald"]
